syntax = "proto3";

package structs.structs;

option go_package = "structs/x/structs/types";

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

message Player {
  string id             = 1;
  uint64 index          = 2;
  string guildId        = 3;
  string substationId   = 4;

  string creator        = 5;
  string primaryAddress = 6 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  string planetId       = 7;
  string fleetId        = 8;

  uint64 load           = 9;
  uint64 capacity       = 10;
  uint64 capacitySecondary  = 11;
  uint64 structsLoad        = 12;

  cosmos.base.v1beta1.Coin storage = 13
    [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  
}
