syntax = "proto3";

package structs.structs;

option go_package = "structs/x/structs/types";
import "structs/structs/keys.proto";

message Struct {
  // What it is
  string id         = 1;
  uint64 index      = 2;
  uint64 type       = 3;

  // Who is it
  string creator  = 4;
  string owner    = 5;

  // Where it is
  string  locationId      = 6;
  ambit   operatingAmbit  = 7;
  uint64  slot            = 8;
}

message StructType {
  uint64  id    = 1;
  string  type  = 2;

  // Fundamental attributes
  structCategory  category        = 3; // Planet or Fleet
  uint64          buildDifficulty = 4; // How much compute is needed to build
  uint64          buildDraw       = 5; // How much energy the Struct consumes during building
  uint64          maxHealth       = 6; // How much damage can it take
  uint64          passiveDraw     = 7; // How much energy the Struct consumes when active
  uint64          possibleAmbit   = 8; // Where can it be built and moved to. Usually only a single ambit but some Structs have multiple possible (i.e. Command Ship)

  // Primary Weapon Configuration
  techActiveWeaponry  primaryWeapon                 = 9;
  techWeaponControl   primaryWeaponControl          = 10;
  uint64              primaryWeaponCharge           = 11;
  uint64              primaryWeaponTargets          = 12;
  uint64              primaryWeaponShots            = 13;
  uint64              primaryWeaponDamage           = 14;
  bool                primaryWeaponBlockable        = 15;
  bool                primaryWeaponCounterable      = 16;
  uint64              primaryWeaponRecoilDamage     = 17;
  string              primaryWeaponShotSuccessRate  = 18 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];

  // Secondary Weapon Configuration
  techActiveWeaponry  secondaryWeapon                 = 19;
  techWeaponControl   secondaryWeaponControl          = 20;
  uint64              secondaryWeaponCharge           = 21;
  uint64              secondaryWeaponTargets          = 22;
  uint64              secondaryWeaponShots            = 23;
  uint64              secondaryWeaponDamage           = 24;
  bool                secondaryWeaponBlockable        = 25;
  bool                secondaryWeaponCounterable      = 26;
  uint64              secondaryWeaponRecoilDamage     = 27;
  string              secondaryWeaponShotSuccessRate  = 28 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];

  // Tech Tree Features
  techPassiveWeaponry               passiveWeaponry             = 29;

  techUnitDefenses                  unitDefenses                = 30;
  techOreReserveDefenses            oreReserveDefenses          = 31;
  techPlanetaryDefenses             planetaryDefenses           = 32;

  techPlanetaryMining               planetaryMining             = 33;
  techPlanetaryRefineries           planetaryRefinery           = 34;

  techPowerGeneration               powerGeneration             = 36;

  // Charge uses
  uint64 activateCharge             = 37;
  uint64 buildCharge                = 38;
  uint64 defendChangeCharge         = 39;
  uint64 moveCharge                 = 40;
  uint64 oreMiningActivateCharge    = 41;
  uint64 oreRefiningActivateCharge  = 42;
  uint64 stealthActivateCharge      = 43;


  // Tech Tree Attributes
  uint64 attackReduction              = 45; // For Defensive Cannon
  bool   attackCounterable            = 46; // For Indirect Combat Module
  bool   stealthSystems               = 47; // For Stealth Mode

  uint64 counterAttack                = 46; // Counter
  uint64 counterAttackSameAmbit       = 47; // Advanced Counter

  uint64 postDestructionDamage        = 48;

  uint64 generatingRate               = 49; // Power Generation

  uint64 planetaryShieldContribution  = 50; // The shield that is added to the Planet

  /*  Storage Not in MVP

  techStorageFacilities storageFacility  = x;
  uint64 storageChangeCharge             = x;

  uint64 storageSpace                 = x;
  uint64 storageAir                   = x;
  uint64 storageLand                  = x;
  uint64 storageWater                 = x;
  */

  string unguidedDefensiveSuccessRate = 55 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];

  string guidedDefensiveSuccessRate   = 56 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
}

message StructDefender {
  string  protectedStructId      = 1;
  string  defendingStructId      = 2;

  string  locationId             = 3;
  ambit   operatingAmbit         = 4;

  uint64  counterAttack          = 5;
  uint64  counterAttackSameAmbit = 6;
}

message StructAttributeRecord {
  string attributeId = 1;
  uint64 value = 2;
}